--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/8-places.css">
+    <link rel="stylesheet" href="styles/100-places.css">
     <link rel="icon" href="images/icon.png">
   </head>
 
@@ -75,13 +75,34 @@
               Welcome to our sleek and stylish urban oasis, nestled in the heart of the city with breathtaking views of the skyline. This contemporary two-bedroom apartment boasts floor-to-ceiling windows, allowing natural light to flood the open-concept living space. Enjoy the fully equipped kitchen, perfect for whipping up a gourmet meal, or step outside to explore the trendy neighborhood filled with cafes, boutiques, and cultural hotspots. Relax on the private balcony as you take in the panoramic cityscape. Ideal for business travelers, couples, or small families looking for a chic and convenient stay.
             </p>
           </div>
+          <div class="amenities">
+            <h2>Amenities</h2>
+            <ul>
+              <li>Tv</li>
+              <li>Wifi</li>
+              <li>Pets friendly</li>
+            </ul>
+          </div>
+          <div class="reviews">
+            <h2>2 Reviews</h2>
+            <ul>
+              <li>
+                <h3>From Bob Dylan the 27th January 2017</h3>
+                <p>Excellent!</p>
+              </li>
+              <li>
+                <h3>From Tom Dylan the 27th January 2017</h3>
+                <p>Excellent!</p>
+              </li>
+            </ul>
+          </div>
         </article>
 
         <article>
           <div class="place-title">
             <h2>My home</h2>
             <div class="price_by_night">
-              80$
+              60$
             </div>
           </div>
           <div class="information">
@@ -97,13 +118,30 @@
               Escape the hustle and bustle in our charming cottage tucked away in a tranquil forest setting. This one-bedroom retreat offers a cozy atmosphere with a rustic fireplace, perfect for chilly evenings. Unwind in the private hot tub on the deck surrounded by towering trees and the soothing sounds of nature. The fully equipped kitchen and outdoor barbecue make dining a breeze, and the nearby hiking trails provide endless opportunities for exploration. Ideal for nature lovers, honeymooners, or anyone seeking a peaceful getaway just a short drive from the city.
             </p>
           </div>
+          <div class="amenities">
+            <h2>Amenities</h2>
+            <ul>
+              <li>Tv</li>
+              <li>Wifi</li>
+              <li>Pets friendly</li>
+            </ul>
+          </div>
+          <div class="reviews">
+            <h2>1 Review</h2>
+            <ul>
+              <li>
+                <h3>From Tom Dylan the 27th January 2017</h3>
+                <p>Very clean and good location!</p>
+              </li>
+            </ul>
+          </div>
         </article>
 
         <article>
           <div class="place-title">
             <h2>My home</h2>
             <div class="price_by_night">
-              80$
+              90$
             </div>
           </div>
           <div class="information">
@@ -118,6 +156,23 @@
             <p>
               Immerse yourself in coastal luxury at our beachfront villa, where sun, sand, and surf are just steps away. This three-bedroom home features expansive windows that frame spectacular ocean views from every room. Lounge on the spacious deck overlooking the sandy shores, or stroll down to the beach for a day of sunbathing and water activities. The open-concept living and dining area, along with a fully equipped kitchen, create an inviting space for family gatherings or friendly get-togethers. Whether you're a beach enthusiast, a family seeking a seaside retreat, or a group of friends looking for the ultimate coastal experience, this is your ideal vacation home.
             </p>
+          </div>
+          <div class="amenities">
+            <h2>Amenities</h2>
+            <ul>
+              <li>Tv</li>
+              <li>Wifi</li>
+              <li>Pets friendly</li>
+            </ul>
+          </div>
+          <div class="reviews">
+            <h2>1 Review</h2>
+            <ul>
+              <li>
+                <h3>From Tom Dylan the 27th January 2017</h3>
+                <p>Very clean and good location!</p>
+              </li>
+            </ul>
           </div>
         </article>
         
